syntax = "proto3";

package tasks.v1;

option go_package = "github.com/Mayer-04/grpc-task-manager-go/pkg/taskpb";

// Manejar fechas y horas en Protocol Buffers
import "google/protobuf/timestamp.proto";
// Cuando una función no necesita parámetros o no retorna datos específicos
// import "google/protobuf/empty.proto";

message Task {
  string id = 1;
  string user_id = 2;
  string title = 3;
  optional string description = 4;
  bool completed = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateTaskRequest {
  string user_id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message UpdateTaskRequest {
  string id = 1;
  Task task = 2;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
  string message = 2;
}

message MarkTaskCompleteRequest {
  string id = 1;
}

message MarkTaskCompleteResponse {
  Task task = 1;
}

message ListTasksRequest {
  string user_id = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

// SERVICIOS
service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc MarkTaskComplete(MarkTaskCompleteRequest) returns (MarkTaskCompleteResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}